--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ header {
 }
 
 .text-underline {
+    cursor: pointer;
     text-decoration: underline;
     font-family: Roboto;
     color: #28292d;
@@ -146,7 +147,8 @@ header {
     line-height: 30px;
     /* 100% */
     text-transform: capitalize;
-    margin: 208px 262px auto 149px;
+    margin: 208px auto auto 149px;
+    width: 200px;
 }
 
 .img-div {
@@ -234,6 +236,7 @@ header {
 }
 
 .read-more {
+    cursor: pointer;
     margin: 71px auto auto 5px;
     text-decoration: underline;
     font-weight: 600;
@@ -243,6 +246,7 @@ header {
     font-style: normal;
     line-height: 28px;
     /* 164.706% */
+    width: 90px;
 }
 
 .blog {
